// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TextInput Appearances 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
    }
  }
>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      medium default
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      medium subtle
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      small default
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input--small"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      small subtle
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input--small"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/TextInput Appearances With Error 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
    }
  }
>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      medium default
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input__field--error"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
      <div
        className="psds-text-input__error"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="exclamation point triangle icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
            />
            <path
              clipRule="evenodd"
              d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      medium subtle
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input__field--error"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
      <div
        className="psds-text-input__error"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="exclamation point triangle icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
            />
            <path
              clipRule="evenodd"
              d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      small default
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input--small psds-text-input__field--error"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
      <div
        className="psds-text-input__error"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="exclamation point triangle icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
            />
            <path
              clipRule="evenodd"
              d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      small subtle
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input--small psds-text-input__field--error"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
      <div
        className="psds-text-input__error"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="exclamation point triangle icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
            />
            <path
              clipRule="evenodd"
              d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/TextInput Basic 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Compare Disabled 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
    }
  }
>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      Normal
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="I'm normal, see"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      Still normal
    </div>
  </label>
  <label
    className="psds-text-input psds-text-input--disabled"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      I'm not usable
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="I'm untouchable"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      Neither am I
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/TextInput Date Input 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
          type="date"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Disabled 1`] = `
<label
  className="psds-text-input psds-text-input--disabled"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Error 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input__field--error"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
    <div
      className="psds-text-input__error"
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="exclamation point triangle icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
          />
          <path
            clipRule="evenodd"
            d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Field After 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input__field--w-after"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="placeholder icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
              fillOpacity=".95"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Label Only 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Long Placeholder 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="some placeholder that goes on forever when the little things can't handle it"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput No Labels 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          aria-label="You need an a11y label"
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Password Input 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
          type="password"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Props Inclusion 1`] = `
<label
  className="psds-text-input className is allowed"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
          title="title is allowed"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Sub Label Only 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          aria-label="You need an a11y label"
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput/examples Autofocused 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      The label
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/TextInput/examples Controlled 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div>
    <label
      className="psds-text-input"
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        The label
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Some placeholder"
              value="a value"
            />
          </div>
        </div>
      </div>
      <div
        className="psds-text-input__sub-label psds-theme--dark"
      >
        The sub label
      </div>
    </label>
    <br />
    <br />
    <div
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.70)",
        }
      }
    >
      <span>
        Current value: 
        a value
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextInput/examples Style Full Width 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
        "width": "500px",
      }
    }
  >
    <label
      className="psds-text-input"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        First
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
              disabled={false}
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </label>
    <label
      className="psds-text-input"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        Second
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input__field--error"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
              disabled={false}
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="psds-text-input__error"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="exclamation point triangle icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
              />
              <path
                clipRule="evenodd"
                d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
    <label
      className="psds-text-input"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        Third
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
              disabled={false}
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </label>
    <label
      className="psds-text-input"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        Fourth
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input__field--error"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
              disabled={false}
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="psds-text-input__error"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="exclamation point triangle icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
              />
              <path
                clipRule="evenodd"
                d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/TextInput/examples Style Right Aligned 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <label
        className="psds-text-input"
      >
        <div
          className="psds-text-input__field-container"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
          >
            <div
              className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
            >
              <input
                className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
                disabled={false}
                placeholder="Filter"
              />
            </div>
          </div>
        </div>
      </label>
    </div>
    <div
      style={
        Object {
          "border": "2px dashed green",
          "height": "50px",
        }
      }
    />
  </div>
</div>
`;
